--- a/packages/web-components/src/components/ic-page-header/ic-page-header.css
+++ b/packages/web-components/src/components/ic-page-header/ic-page-header.css
@@ -1,5 +1,9 @@
 @import "../../global/normalize.css";
 
+/**
+ * @prop --ic-z-index-page-header: z-index of page-header in sticky mode
+ */
+
 :host {
   display: block;
 }
@@ -8,6 +12,7 @@
   position: sticky;
   top: 0;
   box-shadow: var(--ic-elevation-overlay);
+  z-index: var(--ic-z-index-page-header);
 }
 
 header {
